syntax = "proto3";
package pb;
import "pb/common.proto";

option go_package="./pb";

message WhirlyMsg {
  oneof Payload {
    WhirlyProposal whirlyProposal = 1;
    WhirlyVote whirlyVote = 2;
    WhirlyNewView whirlyNewView = 3;
    Request request = 4;
    Reply reply = 5;
    NewLeaderNotify newLeaderNotify = 6;
    NewLeaderEcho newLeaderEcho = 7;
    WhirlyPing whirlyPing = 8;
    LatestBlockRequest latestBlockRequest = 9;
    LatestBlockEcho latestBlockEcho = 10;
    CrWhirlyProposal crWhirlyProposal = 11;
    CrWhirlyVote crWhirlyVote = 12;
  }
  //   string senderAddress = 11;
}

message SimpleWhirlyProof {
  bytes BlockHash = 1;
  uint64 viewNum = 2;
  repeated WhirlyVote proof = 3;
}

message WhirlyProposal {
  uint64 id = 1;
  uint64 senderId = 2;
  WhirlyBlock block = 3;
  QuorumCert highQC = 4;
  SimpleWhirlyProof swProof = 5;
  uint64 epoch = 6;
  string publicAddress = 7;
}

message WhirlyVote {
  uint64 id = 1;
  uint64 senderId = 2;
  uint64 blockView = 3;
  bytes BlockHash = 4;
  bool flag = 5;
  QuorumCert qc = 6;
  bytes partialSig = 7;
  SimpleWhirlyProof swProof = 8;
  uint64 epoch = 9;
  string publicAddress = 10;
  uint64 weight = 11;
}

message WhirlyNewView {
  QuorumCert lockQC = 1;
  uint64 viewNum = 2;
  uint64 epoch = 3;
  string publicAddress = 4;
}

message NewLeaderNotify {
  uint64 leader = 1;
  uint64 epoch = 2;
  bytes proof = 3;
  string publicAddress = 4;
  repeated string committee = 5;
}

message NewLeaderEcho {
  uint64 leader = 1;
  uint64 senderId = 2;
  uint64 epoch = 3;
  WhirlyBlock block = 4;
  SimpleWhirlyProof swProof = 5;
  uint64 vHeight = 6;
  string publicAddress = 7;
}

message LatestBlockRequest {
  uint64 leader = 1;
  uint64 epoch = 2;
  bytes proof = 3;
  string publicAddress = 4;
  repeated string committee = 5;
  uint64 consensusId = 6;
}

message LatestBlockEcho {
  uint64 leader = 1;
  uint64 senderId = 2;
  uint64 epoch = 3;
  WhirlyBlock block = 4;
  SimpleWhirlyProof swProof = 5;
  uint64 vHeight = 6;
  string publicAddress = 7;
}

message WhirlyPing {
  uint64 id = 1;
  string publicAddress = 2;
}

message CrWhirlyProposal {
  uint64 id = 1;
  uint64 senderId = 2;
  WhirlyBlock block = 3;
  QuorumCert highQC = 4;
  SimpleWhirlyProof swProof = 5;
  uint64 epoch = 6;
  string publicAddress = 7;
  repeated bytes finTxs = 8;
}

message CrWhirlyVote {
  uint64 id = 1;
  uint64 senderId = 2;
  uint64 blockView = 3;
  bytes BlockHash = 4;
  bool flag = 5;
  SimpleWhirlyProof swProof = 6;
  uint64 epoch = 7;
  string publicAddress = 8;
  uint64 weight = 9;
  bytes decryptedShares = 10;
}